Add comparison widgets for training variants

--- a/Task2.ipynb
+++ b/Task2.ipynb
@@ -516,6 +516,260 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "id": "30a516d9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 工具函式：比較原始 CLIP 與訓練後模型的預測\n",
+    "from typing import Any, Dict, Optional\n",
+    "\n",
+    "DATASET_REGISTRY: Dict[str, Dict[str, Any]] = {\n",
+    "    \"flowers102\": {\n",
+    "        \"splits\": {\n",
+    "            \"train\": flowers102_train_dts,\n",
+    "            \"val\": flowers102_val_dts,\n",
+    "            \"test\": flowers102_test_dts,\n",
+    "        },\n",
+    "        \"class_names\": flowers102_class_names,\n",
+    "    },\n",
+    "    \"cub_bird\": {\n",
+    "        \"splits\": {\n",
+    "            \"train\": cub_bird_train_dts,\n",
+    "            \"val\": cub_bird_val_dts,\n",
+    "            \"test\": cub_bird_test_dts,\n",
+    "        },\n",
+    "        \"class_names\": cub_bird_class_names,\n",
+    "    },\n",
+    "}\n",
+    "\n",
+    "for entry in DATASET_REGISTRY.values():\n",
+    "    entry[\"prompts\"] = [f\"a photo of a {name}\" for name in entry[\"class_names\"]]\n",
+    "\n",
+    "TRAINED_VARIANTS: Dict[str, Dict[str, Any]] = {}\n",
+    "\n",
+    "\n",
+    "def register_trained_variant(\n",
+    "    name: str,\n",
+    "    dataset: str,\n",
+    "    backbone: \"CLIPModel\",\n",
+    "    head: nn.Module,\n",
+    "    baseline: Optional[\"CLIPModel\"] = None,\n",
+    "    notes: Optional[str] = None,\n",
+    ") -> None:\n",
+    "    \"\"\"紀錄訓練後的模型組態，供可視化比較使用。\"\"\"\n",
+    "    baseline_model = baseline if baseline is not None else model\n",
+    "    backbone.eval()\n",
+    "    head.to(next(backbone.parameters()).device)\n",
+    "    head.eval()\n",
+    "    baseline_model.eval()\n",
+    "    TRAINED_VARIANTS[name] = {\n",
+    "        \"dataset\": dataset,\n",
+    "        \"backbone\": backbone,\n",
+    "        \"head\": head,\n",
+    "        \"baseline\": baseline_model,\n",
+    "        \"notes\": notes or \"\",\n",
+    "    }\n",
+    "\n",
+    "\n",
+    "def _resolve_dataset(dataset_name: str, split: str):\n",
+    "    if dataset_name not in DATASET_REGISTRY:\n",
+    "        raise ValueError(f\"Unknown dataset '{dataset_name}'.\")\n",
+    "    info = DATASET_REGISTRY[dataset_name]\n",
+    "    if split not in info[\"splits\"]:\n",
+    "        raise ValueError(f\"Dataset '{dataset_name}' has no split '{split}'.\")\n",
+    "    return info[\"splits\"][split], info[\"class_names\"], info[\"prompts\"]\n",
+    "\n",
+    "\n",
+    "def _extract_sample(sample):\n",
+    "    if isinstance(sample, dict):\n",
+    "        pixels = sample[\"pixel_values\"]\n",
+    "        label = sample.get(\"label\")\n",
+    "    else:\n",
+    "        pixels, label = sample\n",
+    "    px = torch.as_tensor(pixels).float()\n",
+    "    if px.ndim == 4:\n",
+    "        px = px.squeeze(0)\n",
+    "    if px.ndim == 3 and px.shape[0] != 3 and px.shape[-1] == 3:\n",
+    "        px = px.permute(2, 0, 1)\n",
+    "    if px.ndim != 3:\n",
+    "        raise ValueError(f\"Unexpected pixel shape: {tuple(px.shape)}\")\n",
+    "    return px.unsqueeze(0), (int(label) if label is not None else None)\n",
+    "\n",
+    "\n",
+    "def _topk(prob, k):\n",
+    "    k = min(k, prob.numel())\n",
+    "    values, indices = torch.topk(prob, k)\n",
+    "    return values.cpu(), indices.cpu()\n",
+    "\n",
+    "\n",
+    "def display_prediction_comparison(\n",
+    "    variant_name: str,\n",
+    "    dataset_name: str,\n",
+    "    image_id: int,\n",
+    "    *,\n",
+    "    split: str = \"test\",\n",
+    "    top_k: int = 5,\n",
+    "    show_image: bool = True,\n",
+    ") -> None:\n",
+    "    \"\"\"顯示原始 CLIP 與訓練後模型在指定樣本上的預測。\"\"\"\n",
+    "    variant = TRAINED_VARIANTS.get(variant_name)\n",
+    "    if variant is None:\n",
+    "        print(f\"Variant '{variant_name}' 尚未建立，請先執行對應的訓練 cell。\")\n",
+    "        return\n",
+    "\n",
+    "    dataset_obj, class_names, prompts = _resolve_dataset(dataset_name, split)\n",
+    "    if len(dataset_obj) == 0:\n",
+    "        print(f\"Dataset '{dataset_name}' ({split}) is empty.\")\n",
+    "        return\n",
+    "\n",
+    "    idx = int(image_id)\n",
+    "    idx = max(0, min(idx, len(dataset_obj) - 1))\n",
+    "    sample = dataset_obj[idx]\n",
+    "    pixel_batch, label = _extract_sample(sample)\n",
+    "\n",
+    "    backbone = variant[\"backbone\"]\n",
+    "    head = variant[\"head\"]\n",
+    "    baseline_model = variant[\"baseline\"]\n",
+    "\n",
+    "    device = next(backbone.parameters()).device\n",
+    "    pixel_batch_device = pixel_batch.to(device)\n",
+    "\n",
+    "    with torch.no_grad():\n",
+    "        baseline_model = baseline_model.to(device)\n",
+    "        baseline_model.eval()\n",
+    "        text_inputs = processor(text=prompts, return_tensors=\"pt\", padding=True)\n",
+    "        text_inputs = {k: v.to(device) for k, v in text_inputs.items()}\n",
+    "        text_features = baseline_model.get_text_features(**text_inputs)\n",
+    "        text_features = text_features / text_features.norm(dim=-1, keepdim=True)\n",
+    "        image_features_orig = baseline_model.get_image_features(pixel_values=pixel_batch_device)\n",
+    "        image_features_orig = image_features_orig / image_features_orig.norm(dim=-1, keepdim=True)\n",
+    "        logits_orig = image_features_orig @ text_features.T\n",
+    "        probs_orig = logits_orig.softmax(dim=-1).squeeze(0)\n",
+    "\n",
+    "        backbone = backbone.to(device)\n",
+    "        head = head.to(device)\n",
+    "        backbone.eval()\n",
+    "        head.eval()\n",
+    "        image_features_trained = backbone.get_image_features(pixel_values=pixel_batch_device)\n",
+    "        image_features_trained = image_features_trained / image_features_trained.norm(dim=-1, keepdim=True)\n",
+    "        logits_trained = head(image_features_trained)\n",
+    "        probs_trained = logits_trained.softmax(dim=-1).squeeze(0)\n",
+    "\n",
+    "    top_k = max(1, min(top_k, len(class_names)))\n",
+    "    orig_vals, orig_idx = _topk(probs_orig, top_k)\n",
+    "    tr_vals, tr_idx = _topk(probs_trained, top_k)\n",
+    "\n",
+    "    print(f\"Variant: {variant_name} ({variant['notes']})\")\n",
+    "    print(f\"Dataset: {dataset_name} / {split} | Image ID: {idx}\")\n",
+    "    if label is not None and 0 <= label < len(class_names):\n",
+    "        print(f\"Ground Truth: {class_names[label]} (#{label})\")\n",
+    "    else:\n",
+    "        print(\"Ground Truth: N/A\")\n",
+    "\n",
+    "    if show_image:\n",
+    "        try:\n",
+    "            img = processor.image_processor.postprocess(pixel_batch.clone(), do_denormalize=True)[0]\n",
+    "            from IPython.display import display\n",
+    "            display(img)\n",
+    "        except Exception:\n",
+    "            pass\n",
+    "\n",
+    "    print(\"\n",
+    "Original CLIP (zero-shot) top predictions:\")\n",
+    "    for rank, (val, idx_) in enumerate(zip(orig_vals, orig_idx), start=1):\n",
+    "        print(f\"  {rank}. {class_names[int(idx_)]}: {float(val) * 100:.2f}%\")\n",
+    "\n",
+    "    print(\"\n",
+    "Trained model top predictions:\")\n",
+    "    for rank, (val, idx_) in enumerate(zip(tr_vals, tr_idx), start=1):\n",
+    "        print(f\"  {rank}. {class_names[int(idx_)]}: {float(val) * 100:.2f}%\")\n",
+    "\n",
+    "\n",
+    "def display_prediction_selector(\n",
+    "    variant_name: str,\n",
+    "    *,\n",
+    "    default_dataset: Optional[str] = None,\n",
+    "    default_split: str = \"test\",\n",
+    "    top_k: int = 5,\n",
+    "    show_image: bool = True,\n",
+    "):\n",
+    "    \"\"\"建立互動式的小工具來挑選資料集與圖片索引。\"\"\"\n",
+    "    variant = TRAINED_VARIANTS.get(variant_name)\n",
+    "    if variant is None:\n",
+    "        print(f\"Variant '{variant_name}' 尚未建立，請先執行對應的訓練 cell。\")\n",
+    "        return\n",
+    "\n",
+    "    try:\n",
+    "        import ipywidgets as widgets\n",
+    "        from IPython.display import display\n",
+    "    except ImportError:\n",
+    "        print(\"ipywidgets 未安裝，改以函式呼叫顯示預測結果。\")\n",
+    "        display_prediction_comparison(\n",
+    "            variant_name,\n",
+    "            default_dataset or variant[\"dataset\"],\n",
+    "            image_id=0,\n",
+    "            split=default_split,\n",
+    "            top_k=top_k,\n",
+    "            show_image=show_image,\n",
+    "        )\n",
+    "        return\n",
+    "\n",
+    "    dataset_names = sorted(DATASET_REGISTRY.keys())\n",
+    "    default_dataset = default_dataset or variant.get(\"dataset\") or dataset_names[0]\n",
+    "    if default_dataset not in dataset_names:\n",
+    "        default_dataset = dataset_names[0]\n",
+    "\n",
+    "    dataset_dropdown = widgets.Dropdown(options=dataset_names, value=default_dataset, description=\"Dataset\")\n",
+    "    split_dropdown = widgets.Dropdown(options=list(DATASET_REGISTRY[default_dataset][\"splits\"].keys()), value=default_split, description=\"Split\")\n",
+    "    image_slider = widgets.IntSlider(value=0, min=0, max=max(0, len(DATASET_REGISTRY[default_dataset][\"splits\"][default_split]) - 1), description=\"Image ID\")\n",
+    "    topk_slider = widgets.IntSlider(value=top_k, min=1, max=min(10, len(DATASET_REGISTRY[default_dataset][\"class_names\"])), description=\"Top-k\")\n",
+    "    output = widgets.Output()\n",
+    "\n",
+    "    def _update_slider_range(*_):\n",
+    "        ds = dataset_dropdown.value\n",
+    "        sp = split_dropdown.value\n",
+    "        max_idx = max(0, len(DATASET_REGISTRY[ds][\"splits\"][sp]) - 1)\n",
+    "        image_slider.max = max_idx\n",
+    "        if image_slider.value > max_idx:\n",
+    "            image_slider.value = max_idx\n",
+    "\n",
+    "    def _refresh(*_):\n",
+    "        with output:\n",
+    "            output.clear_output()\n",
+    "            display_prediction_comparison(\n",
+    "                variant_name,\n",
+    "                dataset_dropdown.value,\n",
+    "                image_slider.value,\n",
+    "                split=split_dropdown.value,\n",
+    "                top_k=topk_slider.value,\n",
+    "                show_image=show_image,\n",
+    "            )\n",
+    "\n",
+    "    def _on_dataset_change(change):\n",
+    "        split_dropdown.options = list(DATASET_REGISTRY[dataset_dropdown.value][\"splits\"].keys())\n",
+    "        if split_dropdown.value not in split_dropdown.options:\n",
+    "            split_dropdown.value = split_dropdown.options[0]\n",
+    "        _update_slider_range()\n",
+    "        _refresh()\n",
+    "\n",
+    "    dataset_dropdown.observe(_on_dataset_change, names=\"value\")\n",
+    "    split_dropdown.observe(lambda change: (_update_slider_range(), _refresh()), names=\"value\")\n",
+    "    image_slider.observe(lambda change: _refresh(), names=\"value\")\n",
+    "    topk_slider.observe(lambda change: _refresh(), names=\"value\")\n",
+    "\n",
+    "    _update_slider_range()\n",
+    "    _refresh()\n",
+    "\n",
+    "    controls = widgets.VBox([\n",
+    "        widgets.HBox([dataset_dropdown, split_dropdown]),\n",
+    "        widgets.HBox([image_slider, topk_slider]),\n",
+    "    ])\n",
+    "    display(widgets.VBox([controls, output]))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 7,
    "id": "18e8d754",
    "metadata": {},
@@ -693,8 +947,27 @@
     "    test_loss, test_acc = evaluate(test_loader)\n",
     "    print(f\"Test Loss: {test_loss:.4f} | Test Acc: {test_acc*100:.2f}%\")\n",
     "\n",
+    "register_trained_variant(\n",
+    "    name=\"linear_flowers\",\n",
+    "    dataset=\"flowers102\",\n",
+    "    backbone=model,\n",
+    "    head=head,\n",
+    "    baseline=model,\n",
+    "    notes=\"Linear probing on Flowers102\"\n",
+    ")\n",
     "print('Linear probing Flowers finished')\n",
     "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8d8391e9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 線性探針模型（Flowers102）的原始與訓練後預測比較\n",
+    "display_prediction_selector(\"linear_flowers\", default_dataset=\"flowers102\")"
    ]
   },
   {
@@ -877,9 +1150,28 @@
     "    test_loss, test_acc = evaluate(test_loader)\n",
     "    print(f\"Test Loss: {test_loss:.4f} | Test Acc: {test_acc*100:.2f}%\")\n",
     "\n",
+    "register_trained_variant(\n",
+    "    name=\"linear_birds\",\n",
+    "    dataset=\"cub_bird\",\n",
+    "    backbone=model,\n",
+    "    head=head,\n",
+    "    baseline=model,\n",
+    "    notes=\"Linear probing on CUB-200-2011\"\n",
+    ")\n",
     "print('Linear probing Birds finished')\n",
     "\n",
     "free_gpu()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "20606de4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 線性探針模型（CUB-200-2011）的原始與訓練後預測比較\n",
+    "display_prediction_selector(\"linear_birds\", default_dataset=\"cub_bird\")"
    ]
   },
   {
@@ -1007,6 +1299,14 @@
     "\n",
     "print(\"--- Starting Method: LoRA Fine-Tuning Flowers ---\")\n",
     "\n",
+    "variant_backbone = None\n",
+    "variant_notes = \"LoRA fine-tuning on Flowers102\"\n",
+    "\n",
+    "if 'model' not in globals():\n",
+    "    model = CLIPModel.from_pretrained(MODEL_ID).to(DEVICE)\n",
+    "    model.eval()\n",
+    "\n",
+    "\n",
     "train_loader = flowers102_train_loader if 'flowers102_train_loader' in globals() else None\n",
     "val_loader = flowers102_val_loader if 'flowers102_val_loader' in globals() else None\n",
     "test_loader = flowers102_test_loader if 'flowers102_test_loader' in globals() else None\n",
@@ -1016,6 +1316,7 @@
     "try:\n",
     "    # load a fresh CLIP model to avoid interference\n",
     "    model_lora = CLIPModel.from_pretrained(MODEL_ID).to(DEVICE)\n",
+    "    variant_backbone = model_lora\n",
     "    vision_model = model_lora.vision_model\n",
     "\n",
     "    lora_config = LoraConfig(\n",
@@ -1119,6 +1420,8 @@
     "    print(\"LoRA path failed or PEFT not available; falling back to tuning visual projection + head. Error:\", e)\n",
     "    # fallback approach\n",
     "    model_fb = CLIPModel.from_pretrained(MODEL_ID).to(DEVICE)\n",
+    "    variant_backbone = model_fb\n",
+    "    variant_notes = \"Fallback fine-tuning on Flowers102\"\n",
     "    if hasattr(model_fb, 'visual_projection') and model_fb.visual_projection is not None:\n",
     "        for p in model_fb.visual_projection.parameters():\n",
     "            p.requires_grad = True\n",
@@ -1184,10 +1487,30 @@
     "            return correct/total\n",
     "        print(f\"Fallback Val Acc: {eval_fb()*100:.2f}%\")\n",
     "\n",
+    "if variant_backbone is not None:\n",
+    "    register_trained_variant(\n",
+    "        name=\"lora_flowers\",\n",
+    "        dataset=\"flowers102\",\n",
+    "        backbone=variant_backbone,\n",
+    "        head=head,\n",
+    "        baseline=model,\n",
+    "        notes=variant_notes\n",
+    "    )\n",
     "print('LoRA Flowers finished')\n",
     "\n",
     "\n",
     "free_gpu()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "19e7938e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# LoRA 微調後（Flowers102）的預測比較\n",
+    "display_prediction_selector(\"lora_flowers\", default_dataset=\"flowers102\")"
    ]
   },
   {
@@ -1262,6 +1585,14 @@
     "\n",
     "print(\"--- Starting Method: LoRA Fine-Tuning Birds ---\")\n",
     "\n",
+    "variant_backbone = None\n",
+    "variant_notes = \"LoRA fine-tuning on CUB-200-2011\"\n",
+    "\n",
+    "if 'model' not in globals():\n",
+    "    model = CLIPModel.from_pretrained(MODEL_ID).to(DEVICE)\n",
+    "    model.eval()\n",
+    "\n",
+    "\n",
     "train_loader = cub_bird_train_loader if 'cub_bird_train_loader' in globals() else None\n",
     "val_loader = cub_bird_val_loader if 'cub_bird_val_loader' in globals() else None\n",
     "test_loader = cub_bird_test_loader if 'cub_bird_test_loader' in globals() else None\n",
@@ -1271,6 +1602,7 @@
     "try:\n",
     "    # load a fresh CLIP model to avoid interference\n",
     "    model_lora = CLIPModel.from_pretrained(MODEL_ID).to(DEVICE)\n",
+    "    variant_backbone = model_lora\n",
     "    vision_model = model_lora.vision_model\n",
     "\n",
     "    lora_config = LoraConfig(\n",
@@ -1374,6 +1706,8 @@
     "    print(\"LoRA path failed or PEFT not available; falling back to tuning visual projection + head. Error:\", e)\n",
     "    # fallback approach\n",
     "    model_fb = CLIPModel.from_pretrained(MODEL_ID).to(DEVICE)\n",
+    "    variant_backbone = model_fb\n",
+    "    variant_notes = \"Fallback fine-tuning on CUB-200-2011\"\n",
     "    if hasattr(model_fb, 'visual_projection') and model_fb.visual_projection is not None:\n",
     "        for p in model_fb.visual_projection.parameters():\n",
     "            p.requires_grad = True\n",
@@ -1439,10 +1773,30 @@
     "            return correct/total\n",
     "        print(f\"Fallback Val Acc: {eval_fb()*100:.2f}%\")\n",
     "\n",
+    "if variant_backbone is not None:\n",
+    "    register_trained_variant(\n",
+    "        name=\"lora_birds\",\n",
+    "        dataset=\"cub_bird\",\n",
+    "        backbone=variant_backbone,\n",
+    "        head=head,\n",
+    "        baseline=model,\n",
+    "        notes=variant_notes\n",
+    "    )\n",
     "print('LoRA Birds finished')\n",
     "\n",
     "\n",
     "free_gpu()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ec4f1560",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# LoRA 微調後（CUB-200-2011）的預測比較\n",
+    "display_prediction_selector(\"lora_birds\", default_dataset=\"cub_bird\")"
    ]
   }
  ],
