Replace Task2 prediction viewers with saved comparison grids

--- a/Task2.ipynb
+++ b/Task2.ipynb
@@ -516,6 +516,264 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "id": "30a516d9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 工具函式：比較原始 CLIP 與訓練後模型的預測\n",
+    "from typing import Any, Dict, List, Optional, Sequence, Tuple\n",
+    "import math\n",
+    "\n",
+    "DATASET_REGISTRY: Dict[str, Dict[str, Any]] = {\n",
+    "    \"flowers102\": {\n",
+    "        \"splits\": {\n",
+    "            \"train\": flowers102_train_dts,\n",
+    "            \"val\": flowers102_val_dts,\n",
+    "            \"test\": flowers102_test_dts,\n",
+    "        },\n",
+    "        \"class_names\": flowers102_class_names,\n",
+    "    },\n",
+    "    \"cub_bird\": {\n",
+    "        \"splits\": {\n",
+    "            \"train\": cub_bird_train_dts,\n",
+    "            \"val\": cub_bird_val_dts,\n",
+    "            \"test\": cub_bird_test_dts,\n",
+    "        },\n",
+    "        \"class_names\": cub_bird_class_names,\n",
+    "    },\n",
+    "}\n",
+    "\n",
+    "for entry in DATASET_REGISTRY.values():\n",
+    "    entry[\"prompts\"] = [f\"a photo of a {name}\" for name in entry[\"class_names\"]]\n",
+    "\n",
+    "TRAINED_VARIANTS: Dict[str, Dict[str, Any]] = {}\n",
+    "\n",
+    "\n",
+    "def register_trained_variant(\n",
+    "    name: str,\n",
+    "    dataset: str,\n",
+    "    backbone: \"CLIPModel\",\n",
+    "    head: nn.Module,\n",
+    "    baseline: Optional[\"CLIPModel\"] = None,\n",
+    "    notes: Optional[str] = None,\n",
+    ") -> None:\n",
+    "    \"\"\"紀錄訓練後的模型組態，供可視化比較使用。\"\"\"\n",
+    "    baseline_model = baseline if baseline is not None else model\n",
+    "    backbone.eval()\n",
+    "    head.to(next(backbone.parameters()).device)\n",
+    "    head.eval()\n",
+    "    baseline_model.eval()\n",
+    "    TRAINED_VARIANTS[name] = {\n",
+    "        \"dataset\": dataset,\n",
+    "        \"backbone\": backbone,\n",
+    "        \"head\": head,\n",
+    "        \"baseline\": baseline_model,\n",
+    "        \"notes\": notes or \"\",\n",
+    "    }\n",
+    "\n",
+    "\n",
+    "def _resolve_dataset(dataset_name: str, split: str):\n",
+    "    if dataset_name not in DATASET_REGISTRY:\n",
+    "        raise ValueError(f\"Unknown dataset '{dataset_name}'.\")\n",
+    "    info = DATASET_REGISTRY[dataset_name]\n",
+    "    if split not in info[\"splits\"]:\n",
+    "        raise ValueError(f\"Dataset '{dataset_name}' has no split '{split}'.\")\n",
+    "    return info[\"splits\"][split], info[\"class_names\"], info[\"prompts\"]\n",
+    "\n",
+    "\n",
+    "def _extract_sample(sample):\n",
+    "    if isinstance(sample, dict):\n",
+    "        pixels = sample[\"pixel_values\"]\n",
+    "        label = sample.get(\"label\")\n",
+    "    else:\n",
+    "        pixels, label = sample\n",
+    "    px = torch.as_tensor(pixels).float()\n",
+    "    if px.ndim == 4:\n",
+    "        px = px.squeeze(0)\n",
+    "    if px.ndim == 3 and px.shape[0] not in (1, 3) and px.shape[-1] == 3:\n",
+    "        px = px.permute(2, 0, 1)\n",
+    "    if px.ndim == 2:\n",
+    "        px = px.unsqueeze(0)\n",
+    "    if px.shape[0] == 1:\n",
+    "        px = px.repeat(3, 1, 1)\n",
+    "    if px.shape[1:] != (224, 224):\n",
+    "        px = F.interpolate(\n",
+    "            px.unsqueeze(0), size=(224, 224), mode=\"bilinear\", align_corners=False\n",
+    "        ).squeeze(0)\n",
+    "    if px.ndim != 3 or px.shape[0] != 3:\n",
+    "        raise ValueError(f\"Unexpected pixel shape: {tuple(px.shape)}\")\n",
+    "    return px, (int(label) if label is not None else None)\n",
+    "\n",
+    "\n",
+    "def _prepare_batch(dataset_obj, indices: Sequence[int]):\n",
+    "    tensors: List[torch.Tensor] = []\n",
+    "    labels: List[Optional[int]] = []\n",
+    "    actual_indices: List[int] = []\n",
+    "    for idx in indices:\n",
+    "        if idx < 0 or idx >= len(dataset_obj):\n",
+    "            raise IndexError(f\"Index {idx} out of range for dataset length {len(dataset_obj)}\")\n",
+    "        sample = dataset_obj[idx]\n",
+    "        px, label = _extract_sample(sample)\n",
+    "        tensors.append(px)\n",
+    "        labels.append(label)\n",
+    "        actual_indices.append(idx)\n",
+    "    batch = torch.stack(tensors, dim=0)\n",
+    "    return batch, labels, actual_indices\n",
+    "\n",
+    "\n",
+    "def save_prediction_comparison_grid(\n",
+    "    variant_name: str,\n",
+    "    dataset: str,\n",
+    "    *,\n",
+    "    num_images: int,\n",
+    "    indices: Sequence[int],\n",
+    "    split: str = \"test\",\n",
+    "    cols: int = 3,\n",
+    "    top_k: int = 3,\n",
+    "    font_size: int = 9,\n",
+    "    output_path: Optional[str] = None,\n",
+    "    show: bool = False,\n",
+    ") -> None:\n",
+    "    \"\"\"產生原始 CLIP 與訓練後模型的比較圖，並儲存於指定路徑。\"\"\"\n",
+    "    variant = TRAINED_VARIANTS.get(variant_name)\n",
+    "    if variant is None:\n",
+    "        print(f\"Variant '{variant_name}' 尚未建立，請先執行對應的訓練 cell。\")\n",
+    "        return\n",
+    "\n",
+    "    dataset_obj, class_names, prompts = _resolve_dataset(dataset, split)\n",
+    "    if len(dataset_obj) == 0:\n",
+    "        print(f\"Dataset '{dataset}' ({split}) is empty.\")\n",
+    "        return\n",
+    "\n",
+    "    if num_images <= 0:\n",
+    "        raise ValueError(\"num_images 必須大於 0\")\n",
+    "    if indices is None or len(indices) == 0:\n",
+    "        raise ValueError(\"indices 至少需要一個項目\")\n",
+    "\n",
+    "    selected_indices = list(indices)[:num_images]\n",
+    "    pixel_batch, labels, actual_indices = _prepare_batch(dataset_obj, selected_indices)\n",
+    "\n",
+    "    backbone = variant[\"backbone\"]\n",
+    "    head = variant[\"head\"]\n",
+    "    baseline_model = variant[\"baseline\"]\n",
+    "\n",
+    "    device = next(backbone.parameters()).device\n",
+    "    pixel_batch = pixel_batch.to(device)\n",
+    "\n",
+    "    with torch.no_grad():\n",
+    "        baseline_model = baseline_model.to(device)\n",
+    "        backbone = backbone.to(device)\n",
+    "        head = head.to(device)\n",
+    "\n",
+    "        baseline_model.eval()\n",
+    "        backbone.eval()\n",
+    "        head.eval()\n",
+    "\n",
+    "        text_inputs = processor(text=prompts, return_tensors=\"pt\", padding=True)\n",
+    "        text_inputs = {k: v.to(device) for k, v in text_inputs.items()}\n",
+    "        text_features = baseline_model.get_text_features(**text_inputs)\n",
+    "        text_features = text_features / text_features.norm(dim=-1, keepdim=True)\n",
+    "\n",
+    "        image_features_orig = baseline_model.get_image_features(\n",
+    "            pixel_values=pixel_batch.to(baseline_model.dtype)\n",
+    "        )\n",
+    "        image_features_orig = image_features_orig / image_features_orig.norm(dim=-1, keepdim=True)\n",
+    "        logits_orig = image_features_orig @ text_features.T\n",
+    "        probs_orig = logits_orig.softmax(dim=-1)\n",
+    "\n",
+    "        image_features_trained = backbone.get_image_features(\n",
+    "            pixel_values=pixel_batch.to(backbone.dtype)\n",
+    "        )\n",
+    "        image_features_trained = image_features_trained / image_features_trained.norm(dim=-1, keepdim=True)\n",
+    "        head_params = list(head.parameters())\n",
+    "        head_dtype = head_params[0].dtype if head_params else image_features_trained.dtype\n",
+    "        image_features_trained = image_features_trained.to(head_dtype)\n",
+    "        logits_trained = head(image_features_trained)\n",
+    "        probs_trained = logits_trained.softmax(dim=-1)\n",
+    "\n",
+    "    top_k = max(1, min(top_k, len(class_names)))\n",
+    "    orig_vals, orig_idx = torch.topk(probs_orig, top_k, dim=1)\n",
+    "    tr_vals, tr_idx = torch.topk(probs_trained, top_k, dim=1)\n",
+    "\n",
+    "    rows = math.ceil(num_images / cols)\n",
+    "    fig, axes = plt.subplots(rows, cols, figsize=(cols * 5.2, rows * 3.2), constrained_layout=True)\n",
+    "    if not isinstance(axes, np.ndarray):\n",
+    "        axes = np.array([axes])\n",
+    "    axes = axes.flatten()\n",
+    "\n",
+    "    label_tensor = torch.tensor([(-1 if l is None else l) for l in labels])\n",
+    "\n",
+    "    for i, idx in enumerate(actual_indices):\n",
+    "        ax = axes[i]\n",
+    "        ax.axis(\"off\")\n",
+    "\n",
+    "        img = pixel_batch[i].detach().float().cpu()\n",
+    "        img = (img - img.min()) / max(1e-6, (img.max() - img.min()))\n",
+    "        ax.imshow(img.permute(1, 2, 0))\n",
+    "\n",
+    "        gt = label_tensor[i].item()\n",
+    "        if 0 <= gt < len(class_names):\n",
+    "            title = f\"{dataset} idx:{idx}\n",
+    "GT: {class_names[gt]}\"\n",
+    "        else:\n",
+    "            title = f\"{dataset} idx:{idx}\n",
+    "GT: N/A\"\n",
+    "        ax.set_title(title, fontsize=font_size + 1, pad=3)\n",
+    "\n",
+    "        base_x = 1.02\n",
+    "        trained_x = 1.55\n",
+    "        y0 = 0.92\n",
+    "        dy = 0.1\n",
+    "\n",
+    "        ax.text(base_x, y0, \"Zero-shot\", transform=ax.transAxes, fontsize=font_size, fontweight=\"bold\", ha=\"left\", va=\"top\")\n",
+    "        ax.text(trained_x, y0, \"Trained\", transform=ax.transAxes, fontsize=font_size, fontweight=\"bold\", ha=\"left\", va=\"top\")\n",
+    "\n",
+    "        for rank in range(top_k):\n",
+    "            b_idx = int(orig_idx[i, rank])\n",
+    "            b_score = float(orig_vals[i, rank]) * 100.0\n",
+    "            t_idx = int(tr_idx[i, rank])\n",
+    "            t_score = float(tr_vals[i, rank]) * 100.0\n",
+    "\n",
+    "            base_color = \"#23a559\" if b_idx == gt and gt >= 0 else \"#1f77b4\"\n",
+    "            trained_color = \"#23a559\" if t_idx == gt and gt >= 0 else \"#d43f3a\"\n",
+    "\n",
+    "            ax.text(\n",
+    "                base_x,\n",
+    "                y0 - (rank + 1) * dy,\n",
+    "                f\"{rank + 1}. {class_names[b_idx]} ({b_score:.1f}%)\",\n",
+    "                transform=ax.transAxes,\n",
+    "                fontsize=font_size,\n",
+    "                color=base_color,\n",
+    "                ha=\"left\",\n",
+    "                va=\"top\",\n",
+    "            )\n",
+    "            ax.text(\n",
+    "                trained_x,\n",
+    "                y0 - (rank + 1) * dy,\n",
+    "                f\"{rank + 1}. {class_names[t_idx]} ({t_score:.1f}%)\",\n",
+    "                transform=ax.transAxes,\n",
+    "                fontsize=font_size,\n",
+    "                color=trained_color,\n",
+    "                ha=\"left\",\n",
+    "                va=\"top\",\n",
+    "            )\n",
+    "\n",
+    "    for j in range(len(actual_indices), len(axes)):\n",
+    "        axes[j].axis(\"off\")\n",
+    "\n",
+    "    if output_path is None:\n",
+    "        output_path = f\"./data/{variant_name}_{dataset}_result.png\"\n",
+    "    os.makedirs(os.path.dirname(output_path), exist_ok=True)\n",
+    "    fig.savefig(output_path, dpi=300, bbox_inches=\"tight\")\n",
+    "    if show:\n",
+    "        plt.show()\n",
+    "    plt.close(fig)\n",
+    "    print(f\"Saved comparison grid to {output_path}\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 7,
    "id": "18e8d754",
    "metadata": {},
@@ -693,8 +951,36 @@
     "    test_loss, test_acc = evaluate(test_loader)\n",
     "    print(f\"Test Loss: {test_loss:.4f} | Test Acc: {test_acc*100:.2f}%\")\n",
     "\n",
+    "register_trained_variant(\n",
+    "    name=\"linear_flowers\",\n",
+    "    dataset=\"flowers102\",\n",
+    "    backbone=model,\n",
+    "    head=head,\n",
+    "    baseline=model,\n",
+    "    notes=\"Linear probing on Flowers102\"\n",
+    ")\n",
     "print('Linear probing Flowers finished')\n",
     "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8d8391e9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 線性探針模型（Flowers102）的原始與訓練後預測比較\n",
+    "save_prediction_comparison_grid(\n",
+    "    \"linear_flowers\",\n",
+    "    dataset=\"flowers102\",\n",
+    "    num_images=6,\n",
+    "    indices=[12, 58, 85, 128, 150, 274],\n",
+    "    split=\"test\",\n",
+    "    cols=3,\n",
+    "    top_k=3,\n",
+    "    output_path=\"./data/linear_flowers_result.png\",\n",
+    ")\n"
    ]
   },
   {
@@ -877,9 +1163,37 @@
     "    test_loss, test_acc = evaluate(test_loader)\n",
     "    print(f\"Test Loss: {test_loss:.4f} | Test Acc: {test_acc*100:.2f}%\")\n",
     "\n",
+    "register_trained_variant(\n",
+    "    name=\"linear_birds\",\n",
+    "    dataset=\"cub_bird\",\n",
+    "    backbone=model,\n",
+    "    head=head,\n",
+    "    baseline=model,\n",
+    "    notes=\"Linear probing on CUB-200-2011\"\n",
+    ")\n",
     "print('Linear probing Birds finished')\n",
     "\n",
     "free_gpu()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "20606de4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 線性探針模型（CUB-200-2011）的原始與訓練後預測比較\n",
+    "save_prediction_comparison_grid(\n",
+    "    \"linear_birds\",\n",
+    "    dataset=\"cub_bird\",\n",
+    "    num_images=6,\n",
+    "    indices=[25, 45, 111, 124, 125, 127],\n",
+    "    split=\"test\",\n",
+    "    cols=3,\n",
+    "    top_k=3,\n",
+    "    output_path=\"./data/linear_birds_result.png\",\n",
+    ")\n"
    ]
   },
   {
@@ -1007,6 +1321,14 @@
     "\n",
     "print(\"--- Starting Method: LoRA Fine-Tuning Flowers ---\")\n",
     "\n",
+    "variant_backbone = None\n",
+    "variant_notes = \"LoRA fine-tuning on Flowers102\"\n",
+    "\n",
+    "if 'model' not in globals():\n",
+    "    model = CLIPModel.from_pretrained(MODEL_ID).to(DEVICE)\n",
+    "    model.eval()\n",
+    "\n",
+    "\n",
     "train_loader = flowers102_train_loader if 'flowers102_train_loader' in globals() else None\n",
     "val_loader = flowers102_val_loader if 'flowers102_val_loader' in globals() else None\n",
     "test_loader = flowers102_test_loader if 'flowers102_test_loader' in globals() else None\n",
@@ -1016,6 +1338,7 @@
     "try:\n",
     "    # load a fresh CLIP model to avoid interference\n",
     "    model_lora = CLIPModel.from_pretrained(MODEL_ID).to(DEVICE)\n",
+    "    variant_backbone = model_lora\n",
     "    vision_model = model_lora.vision_model\n",
     "\n",
     "    lora_config = LoraConfig(\n",
@@ -1119,6 +1442,8 @@
     "    print(\"LoRA path failed or PEFT not available; falling back to tuning visual projection + head. Error:\", e)\n",
     "    # fallback approach\n",
     "    model_fb = CLIPModel.from_pretrained(MODEL_ID).to(DEVICE)\n",
+    "    variant_backbone = model_fb\n",
+    "    variant_notes = \"Fallback fine-tuning on Flowers102\"\n",
     "    if hasattr(model_fb, 'visual_projection') and model_fb.visual_projection is not None:\n",
     "        for p in model_fb.visual_projection.parameters():\n",
     "            p.requires_grad = True\n",
@@ -1184,10 +1509,39 @@
     "            return correct/total\n",
     "        print(f\"Fallback Val Acc: {eval_fb()*100:.2f}%\")\n",
     "\n",
+    "if variant_backbone is not None:\n",
+    "    register_trained_variant(\n",
+    "        name=\"lora_flowers\",\n",
+    "        dataset=\"flowers102\",\n",
+    "        backbone=variant_backbone,\n",
+    "        head=head,\n",
+    "        baseline=model,\n",
+    "        notes=variant_notes\n",
+    "    )\n",
     "print('LoRA Flowers finished')\n",
     "\n",
     "\n",
     "free_gpu()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "19e7938e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# LoRA 微調後（Flowers102）的預測比較\n",
+    "save_prediction_comparison_grid(\n",
+    "    \"lora_flowers\",\n",
+    "    dataset=\"flowers102\",\n",
+    "    num_images=6,\n",
+    "    indices=[55, 210, 320, 402, 518, 640],\n",
+    "    split=\"test\",\n",
+    "    cols=3,\n",
+    "    top_k=3,\n",
+    "    output_path=\"./data/fine_flowers_result.png\",\n",
+    ")\n"
    ]
   },
   {
@@ -1262,6 +1616,14 @@
     "\n",
     "print(\"--- Starting Method: LoRA Fine-Tuning Birds ---\")\n",
     "\n",
+    "variant_backbone = None\n",
+    "variant_notes = \"LoRA fine-tuning on CUB-200-2011\"\n",
+    "\n",
+    "if 'model' not in globals():\n",
+    "    model = CLIPModel.from_pretrained(MODEL_ID).to(DEVICE)\n",
+    "    model.eval()\n",
+    "\n",
+    "\n",
     "train_loader = cub_bird_train_loader if 'cub_bird_train_loader' in globals() else None\n",
     "val_loader = cub_bird_val_loader if 'cub_bird_val_loader' in globals() else None\n",
     "test_loader = cub_bird_test_loader if 'cub_bird_test_loader' in globals() else None\n",
@@ -1271,6 +1633,7 @@
     "try:\n",
     "    # load a fresh CLIP model to avoid interference\n",
     "    model_lora = CLIPModel.from_pretrained(MODEL_ID).to(DEVICE)\n",
+    "    variant_backbone = model_lora\n",
     "    vision_model = model_lora.vision_model\n",
     "\n",
     "    lora_config = LoraConfig(\n",
@@ -1374,6 +1737,8 @@
     "    print(\"LoRA path failed or PEFT not available; falling back to tuning visual projection + head. Error:\", e)\n",
     "    # fallback approach\n",
     "    model_fb = CLIPModel.from_pretrained(MODEL_ID).to(DEVICE)\n",
+    "    variant_backbone = model_fb\n",
+    "    variant_notes = \"Fallback fine-tuning on CUB-200-2011\"\n",
     "    if hasattr(model_fb, 'visual_projection') and model_fb.visual_projection is not None:\n",
     "        for p in model_fb.visual_projection.parameters():\n",
     "            p.requires_grad = True\n",
@@ -1439,10 +1804,39 @@
     "            return correct/total\n",
     "        print(f\"Fallback Val Acc: {eval_fb()*100:.2f}%\")\n",
     "\n",
+    "if variant_backbone is not None:\n",
+    "    register_trained_variant(\n",
+    "        name=\"lora_birds\",\n",
+    "        dataset=\"cub_bird\",\n",
+    "        backbone=variant_backbone,\n",
+    "        head=head,\n",
+    "        baseline=model,\n",
+    "        notes=variant_notes\n",
+    "    )\n",
     "print('LoRA Birds finished')\n",
     "\n",
     "\n",
     "free_gpu()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ec4f1560",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# LoRA 微調後（CUB-200-2011）的預測比較\n",
+    "save_prediction_comparison_grid(\n",
+    "    \"lora_birds\",\n",
+    "    dataset=\"cub_bird\",\n",
+    "    num_images=6,\n",
+    "    indices=[18, 62, 135, 204, 288, 330],\n",
+    "    split=\"test\",\n",
+    "    cols=3,\n",
+    "    top_k=3,\n",
+    "    output_path=\"./data/fine_birds_result.png\",\n",
+    ")\n"
    ]
   }
  ],
