--- a/Task2.ipynb
+++ b/Task2.ipynb
@@ -3807,9 +3807,29 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 22,
+   "id": "bb3494ae",
    "metadata": {},
-   "execution_count": null,
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/tmp/ipykernel_1445591/3945290448.py:138: UserWarning: This figure was using a layout engine that is incompatible with subplots_adjust and/or tight_layout; not calling subplots_adjust.\n",
+      "  fig.subplots_adjust(wspace=0.18, hspace=0.28)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Saved comparison grid to ./data/linear_flowers_flowers102_photo_linear_result.png\n",
+      "Saved comparison grid to ./data/lora_flowers_flowers102_photo_lora_result.png\n",
+      "Saved comparison grid to ./data/linear_birds_cub_bird_photo_linear_result.png\n",
+      "Saved comparison grid to ./data/lora_birds_cub_bird_photo_lora_result.png\n"
+     ]
+    }
+   ],
    "source": [
     "# === Local photo visualization helpers ===\n",
     "class InlineImageDataset:\n",
